--- a/src/assets/styles/cmps/stay/StayPreview.css
+++ b/src/assets/styles/cmps/stay/StayPreview.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 250px;
+    max-width: 249px;
     line-height: 1rem;
     color: var(--gray2);
 }
@@ -11,7 +11,7 @@
     position: relative;
     overflow: hidden;
     width: 100%;
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 1.025 / 1;
     height: auto;
     display: block;
 }
@@ -58,23 +58,36 @@
     fill: var(--primary-clr);
 }
 
+.stay-info {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    padding-inline-start: 0.25rem;
+    padding-top: 0.53rem;
+    line-height: 1.1;
+
+    header,
+    p {
+        margin: 0;
+        padding: 0;
+    }
+}
+
 .stay-name {
     color: var(--gray3);
     font-family: cereal-medium;
     font-weight: 500;
     font-size: 0.813rem;
-    margin-inline-start: 0.25rem;
 
     &:hover {
         text-decoration: none;
     }
 }
 
+
 .stay-card-dates,
 .stay-card-details {
     font-size: 0.75rem;
-    margin-block: 0 0.2rem;
-    margin-inline-start: 0.25rem;
 }
 
 .guest-favorite-badge {
